Added states for ballon

--- a/game.html
+++ b/game.html
@@ -23,6 +23,7 @@
 <script type="text/javascript" src="../spui_engine/js/engine/objectManager.js"></script>
 <script type="text/javascript" src="../spui_engine/js/engine/game.js"></script>
 <script type="text/javascript" src="../spui_engine/js/engine/parallax.js"></script>
+<script type="text/javascript" src="../spui_engine/js/engine/stateManager.js"></script>
 
 <!-- Including the game objects -->
 <script type="text/javascript" src="js/ballon/ballon.js"></script>
