Own canvas for parallax

--- a/game.html
+++ b/game.html
@@ -6,10 +6,8 @@
 </head>
 <body>
 
-
-
 <div id="wrapper">
-	<!-- <div id="parallaxFrame"></div> -->
+	<canvas id="parallaxCanvas" width="640" height="390"></canvas>
     <div id="pictureFrame"></div>
     <canvas id="canvas"></canvas>
 
@@ -17,8 +15,6 @@
 		<span id="score"></span>
 	</div>
 </div>
-
-
 
 <!-- JQuery is necessary -->
 <script type="text/javascript" src="../spui_engine/js/lib/jquery.min.js"></script>
